--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wpda-client",
-  "version": "0.0.0",
-  "description": "Small description for wpda-client goes here",
+  "version": "0.1.0",
+  "description": "Client app of the Waze Place Discovery & Audit.",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
+    "ember-bootstrap": "0.11.1",
     "ember-cli": "2.9.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
@@ -35,9 +36,11 @@
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.9.0",
+    "ember-django-adapter": "1.1.3",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ember-simple-auth": "1.1.0",
     "ember-welcome-page": "^1.0.3",
     "loader.js": "^4.0.10"
   }
