--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,11 @@
 {
   "name": "wpda-client",
   "dependencies": {
-    "ember": "~2.9.0",
+    "ember": "lts-2-8",
     "ember-cli-shims": "0.1.3",
     "bootstrap": "~3.3.5"
+  },
+  "resolutions": {
+    "ember": "lts-2-8"
   }
 }
